--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/addEditHabitFragment">
+    app:startDestination="@id/todayFragment">
+
+    <fragment
+        android:id="@+id/todayFragment"
+        android:name="com.microhabitcoach.ui.today.TodayFragment"
+        android:label="@string/today"
+        tools:layout="@layout/fragment_today">
+        <action
+            android:id="@+id/actionTodayFragmentToAddEditHabitFragment"
+            app:destination="@id/addEditHabitFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/addEditHabitFragment"
