--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                app:chipBackgroundColor="@color/colorPrimary"
+                app:chipBackgroundColor="?attr/colorPrimary"
                 tools:text="Fitness" />
 
         </LinearLayout>
